--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 				//   if the authorizedOwners property is specified (see below)
 				// - If an application id is specified, the webmap configuration isn't used
 				webmap: "",
-				appid: "e4afbaab89444152a95adfe74c0aa5e0",
+				appid: "e4afbaab89444152a95adfe74c0aa5e0&edit",
 				// Optional list of authorized application or web map owners
 				// Has to be specified when using appid or webmap url parameters (e.g. ["user1"], ["user1", "user2"])
 				// To authorize all users you can use ["*"]
